booking payment step 1 for hotel

--- a/app/less/mobile.less
+++ b/app/less/mobile.less
@@ -20,3 +20,4 @@
 @import "mobile/nav-tabs.less";
 @import "mobile/tour.less";
 @import "mobile/flight-booking.less";
+@import "mobile/hotel-booking.less";
