--- a/app/less/mobile/hotel-booking.less
+++ b/app/less/mobile/hotel-booking.less
@@ -1,4 +1,4 @@
-.flight-booking-header {
+.hotel-booking-header {
   margin: 0 0 15px;
   text-align: center;
   padding: 20px 0 15px;
@@ -7,7 +7,7 @@
   border-color: #ddd;
 }
 
-.flight-booking-progress {
+.hotel-booking-progress {
   padding: 20px 0 15px 0;
   width: 280px;
   margin: 0 auto 30px auto;
@@ -60,7 +60,7 @@
   }
 }
 
-.flight-booking-block {
+.hotel-booking-block {
 
   form {
     padding: 0 20px;
@@ -121,15 +121,15 @@
     border-color: #ddd;
   }
 
-  .flight-detail-info {
+  .hotel-detail-info {
     background: #eee;
     margin-left: -10px;
     margin-right: -10px;
     padding-bottom: 5px;
     margin-bottom: 15px;
 
-    .outbound-flight-block,
-    .inbound-flight-block {
+    .outbound-hotel-block,
+    .inbound-hotel-block {
       padding: 10px 10px 0 10px;
     }
 
@@ -293,9 +293,29 @@
       }
     }
   }
+
+  .content-block {
+    margin-left: -20px;
+    margin-right: -20px;
+    color: #353535;
+
+    &.catatan {
+      font-size: 12px
+    }
+
+    p {
+      color: #353535;
+      padding: 0 20px;
+      line-height: 20px
+    }
+
+    strong {
+      color: #000;
+    }
+  }
 }
 
-.flight-ticket-block {
+.hotel-ticket-block {
   padding: 0 20px;
 
   .download-ticket-block {
