--- a/app/css/sapta-tour.mobile.css
+++ b/app/css/sapta-tour.mobile.css
@@ -5740,7 +5740,7 @@ footer a {
   color: #ffffff;
 }
 .flight-booking-header {
-  margin: 0 -20px 15px;
+  margin: 0 0 15px;
   text-align: center;
   padding: 20px 0 15px;
   line-height: 20px;
@@ -5749,7 +5749,7 @@ footer a {
 }
 .flight-booking-progress {
   padding: 20px 0 15px 0;
-  width: 300px;
+  width: 280px;
   margin: 0 auto 30px auto;
 }
 .flight-booking-progress.step-1 {
@@ -6082,6 +6082,379 @@ footer a {
   font-size: 13px;
 }
 .flight-ticket-block .call-center-message {
+  padding: 25px 5px;
+  font-size: 11px;
+  color: #999;
+}
+.btn-download-ticket {
+  margin: 0 auto 30px;
+  width: 279px;
+  height: 44px;
+  background: url(../img/mobile/ico-sprite.png);
+  background-position: 0 -80px;
+  display: block;
+  text-indent: -9999px;
+  overflow: hidden;
+}
+.hotel-booking-header {
+  margin: 0 0 15px;
+  text-align: center;
+  padding: 20px 0 15px;
+  line-height: 20px;
+  background: #eeebeb;
+  border-color: #ddd;
+}
+.hotel-booking-progress {
+  padding: 20px 0 15px 0;
+  width: 280px;
+  margin: 0 auto 30px auto;
+}
+.hotel-booking-progress.step-1 {
+  background: url(../img/mobile/payment-process-1.png) no-repeat bottom center;
+}
+.hotel-booking-progress.step-2 {
+  padding-right: 10px;
+  padding-left: 10px;
+  background: url(../img/mobile/payment-process-2.png) no-repeat bottom center;
+}
+.hotel-booking-progress.step-3 {
+  background: url(../img/mobile/payment-process-3.png) no-repeat bottom center;
+}
+.hotel-booking-progress.step-4 {
+  background: url(../img/mobile/payment-process-4.png) no-repeat bottom center;
+}
+.hotel-booking-progress.step-5 {
+  margin-top: 10px;
+  background: url(../img/mobile/payment-process-4.png) no-repeat bottom center;
+}
+.hotel-booking-progress span {
+  font-size: 14px;
+  display: inline-block;
+  width: 25%;
+  text-align: center;
+}
+.hotel-booking-progress span.current {
+  font-weight: 600;
+}
+.hotel-booking-progress span:first-child {
+  text-align: left;
+}
+.hotel-booking-progress span:nth-child(3) {
+  text-align: left;
+  padding-left: 15px;
+}
+.hotel-booking-progress span:last-child {
+  text-align: right;
+}
+.hotel-booking-block form {
+  padding: 0 20px;
+}
+.hotel-booking-block form#flightBookingStep2 {
+  padding: 0 10px;
+}
+.hotel-booking-block .account-login {
+  background: #fcaf56;
+  padding: 20px 25px;
+  margin-bottom: 25px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 0px 1px #e99e46, 1px 2px 3px #d8d8d8;
+}
+.hotel-booking-block .account-login .btn-login,
+.hotel-booking-block .account-login .btn-fb-login {
+  display: inline-block;
+  border-radius: 3px;
+  font-size: 13px;
+  line-height: 34px;
+}
+.hotel-booking-block .account-login .btn-login {
+  margin-right: 5px;
+  width: 60px;
+  background: #fff;
+  color: #000;
+  box-shadow: 0px 0px 0px 1px #c0c0c0, 0px 1px 1px #d8d8d8;
+}
+.hotel-booking-block .account-login .btn-fb-login {
+  width: 155px;
+  background: #5e76ac;
+  color: #fff;
+  box-shadow: 0px 0px 0px 1px #7287b6;
+}
+.hotel-booking-block .passenger-list {
+  background: #eee;
+  margin-left: -20px;
+  margin-right: -20px;
+}
+.hotel-booking-block .passenger-info-detail {
+  padding: 25px 20px;
+  border-top: 1px solid #ddd;
+}
+.hotel-booking-block .add-more-passenger-block {
+  margin-left: -20px;
+  margin-right: -20px;
+  padding: 25px;
+  background: #eee;
+  border-top: 1px solid rgba(230, 230, 230, 0.9);
+  border-color: #ddd;
+}
+.hotel-booking-block .hotel-detail-info {
+  background: #eee;
+  margin-left: -10px;
+  margin-right: -10px;
+  padding-bottom: 5px;
+  margin-bottom: 15px;
+}
+.hotel-booking-block .hotel-detail-info .outbound-hotel-block,
+.hotel-booking-block .hotel-detail-info .inbound-hotel-block {
+  padding: 10px 10px 0 10px;
+}
+.hotel-booking-block .hotel-detail-info ul.outbound-flight,
+.hotel-booking-block .hotel-detail-info ul.inbound-flight {
+  -webkit-box-shadow: 0px 0px 0px 1px #d8d8d8, 1px 3px 2px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 0px 0px 1px #d8d8d8, 1px 3px 2px rgba(0, 0, 0, 0.1);
+  margin-bottom: 10px;
+}
+.hotel-booking-block .hotel-detail-info ul.outbound-flight li,
+.hotel-booking-block .hotel-detail-info ul.inbound-flight li {
+  position: relative;
+  padding: 10px 20px 10px 55px;
+  background: #fff;
+  border-bottom: 1px solid #e0e0e0;
+  line-height: 30px;
+}
+.hotel-booking-block .hotel-detail-info ul.outbound-flight li.bg-light,
+.hotel-booking-block .hotel-detail-info ul.inbound-flight li.bg-light {
+  background: #f8f8f8;
+}
+.hotel-booking-block .hotel-detail-info ul.outbound-flight li:first-child,
+.hotel-booking-block .hotel-detail-info ul.inbound-flight li:first-child {
+  padding: 15px 0;
+  line-height: normal;
+  font-weight: 600;
+}
+.hotel-booking-block .hotel-detail-info ul.outbound-flight li:last-child,
+.hotel-booking-block .hotel-detail-info ul.inbound-flight li:last-child {
+  border-bottom: 0;
+}
+.hotel-booking-block .hotel-detail-info ul.outbound-flight li.schedule,
+.hotel-booking-block .hotel-detail-info ul.inbound-flight li.schedule {
+  height: 80px;
+  line-height: 18px;
+}
+.hotel-booking-block .hotel-detail-info ul.outbound-flight li.schedule .ico-departure,
+.hotel-booking-block .hotel-detail-info ul.inbound-flight li.schedule .ico-departure {
+  top: 30px;
+}
+.hotel-booking-block .hotel-detail-info ul.outbound-flight li.schedule .ico-return,
+.hotel-booking-block .hotel-detail-info ul.inbound-flight li.schedule .ico-return {
+  top: 26px;
+}
+.hotel-booking-block .hotel-detail-info ul.outbound-flight li .ico,
+.hotel-booking-block .hotel-detail-info ul.inbound-flight li .ico {
+  position: absolute;
+  top: 17px;
+  left: 20px;
+}
+.hotel-booking-block .hotel-detail-info ul.outbound-flight li .ico-bag,
+.hotel-booking-block .hotel-detail-info ul.inbound-flight li .ico-bag {
+  top: 17px;
+}
+.hotel-booking-block .hotel-detail-info ul.outbound-flight li .ico-adult,
+.hotel-booking-block .hotel-detail-info ul.inbound-flight li .ico-adult {
+  left: 23px;
+}
+.hotel-booking-block .hotel-detail-info ul.outbound-flight li .ico-marker,
+.hotel-booking-block .hotel-detail-info ul.inbound-flight li .ico-marker {
+  top: 17px;
+}
+.hotel-booking-block .hotel-detail-info ul.outbound-flight li.airline,
+.hotel-booking-block .hotel-detail-info ul.inbound-flight li.airline {
+  padding-left: 15px;
+  line-height: 15px;
+}
+.hotel-booking-block .hotel-detail-info ul.outbound-flight li.airline span,
+.hotel-booking-block .hotel-detail-info ul.inbound-flight li.airline span {
+  line-height: 27px;
+}
+.hotel-booking-block .hotel-detail-info ul.outbound-flight li label,
+.hotel-booking-block .hotel-detail-info ul.inbound-flight li label {
+  color: #888;
+  font-size: 11px;
+  font-family: "Gotham Black";
+}
+.hotel-booking-block .passenger-list-block {
+  margin-left: -10px;
+  margin-right: -10px;
+  padding: 5px 0;
+}
+.hotel-booking-block .passenger-list-block .passenger-info {
+  padding: 10px 10px 3px 10px;
+}
+.hotel-booking-block .passenger-list-block .passenger-info ul {
+  -webkit-box-shadow: 0px 0px 0px 1px #d8d8d8, 1px 3px 2px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 0px 0px 1px #d8d8d8, 1px 3px 2px rgba(0, 0, 0, 0.1);
+  border-bottom: 2px solid #d8d8d8;
+  margin-bottom: 0;
+}
+.hotel-booking-block .passenger-list-block .passenger-info li {
+  padding: 21px 0 21px 68px;
+  border-bottom: 1px solid #d8d8d8;
+}
+.hotel-booking-block .passenger-list-block .passenger-info li:first-child {
+  position: relative;
+}
+.hotel-booking-block .passenger-list-block .passenger-info li .number {
+  line-height: 32pxs;
+  font-size: 36px;
+  left: 17px;
+  top: 20px;
+  color: #d9d9d9;
+}
+.hotel-booking-block .passenger-list-block .passenger-info li label {
+  text-transform: uppercase;
+  font-weight: 600;
+  color: #888;
+}
+.hotel-booking-block .pricing-detail {
+  -webkit-box-shadow: 0px 0px 0px 1px #d8d8d8, 1px 3px 2px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 0px 0px 1px #d8d8d8, 1px 3px 2px rgba(0, 0, 0, 0.1);
+}
+.hotel-booking-block .pricing-detail li {
+  padding: 17px 20px 17px 25px;
+  border-bottom: 1px solid #d8d8d8;
+  font-size: 14px;
+}
+.hotel-booking-block .pricing-detail li:last-child {
+  border-bottom: 0;
+  text-align: right;
+}
+.hotel-booking-block .pricing-detail li:last-child label {
+  padding-right: 50px;
+}
+.hotel-booking-block .pricing-detail li:last-child sup {
+  font-size: 14px;
+}
+.hotel-booking-block .pricing-detail li:last-child .price {
+  font-size: 24px;
+}
+.hotel-booking-block .pricing-detail li span.pull-left {
+  width: 60%;
+  text-align: left;
+}
+.hotel-booking-block .pricing-detail li span.pull-right {
+  width: 40%;
+  text-align: right;
+  font-weight: 600;
+}
+.hotel-booking-block .pricing-detail li label {
+  text-transform: uppercase;
+  font-weight: 600;
+  margin-bottom: 3px;
+  color: #888;
+}
+.hotel-booking-block .content-block {
+  margin-left: -20px;
+  margin-right: -20px;
+  color: #353535;
+}
+.hotel-booking-block .content-block.catatan {
+  font-size: 12px;
+}
+.hotel-booking-block .content-block p {
+  color: #353535;
+  padding: 0 20px;
+  line-height: 20px;
+}
+.hotel-booking-block .content-block strong {
+  color: #000;
+}
+.hotel-ticket-block {
+  padding: 0 20px;
+}
+.hotel-ticket-block .download-ticket-block {
+  margin-left: -20px;
+  margin-right: -20px;
+  border-color: #ddd;
+}
+.hotel-ticket-block .download-ticket-block .bg-light {
+  margin: 30px 20px 20px;
+  line-height: 24px;
+  background: #f4f4f2;
+  padding: 26px 30px 26px 60px;
+  text-align: left;
+}
+.hotel-ticket-block .download-ticket-block .bg-light .ico-check {
+  top: 30px;
+  left: 20px;
+}
+.hotel-ticket-block .process-creating-ticket-block {
+  margin-left: -20px;
+  margin-right: -20px;
+  border-color: #ddd;
+}
+.hotel-ticket-block .process-creating-ticket-block .bg-light.message {
+  margin: 30px 20px 6px;
+  line-height: 20px;
+  background: #f4f4f2;
+  padding: 25px 20px 25px 60px;
+  text-align: left;
+}
+.hotel-ticket-block .process-creating-ticket-block .bg-light.message .ico-gear {
+  top: 30px;
+  left: 20px;
+}
+.hotel-ticket-block .process-creating-ticket-block .bg-light.creating {
+  font-size: 13px;
+  background: #f4f4f2;
+  text-align: left;
+  margin: 0 20px 30px 20px;
+  padding: 30px 30px 30px 45px;
+}
+.hotel-ticket-block .process-creating-ticket-block .bg-light.creating .duration {
+  padding-left: 25px;
+  font-size: 20px;
+  color: #158ea3;
+  margin-top: 10px;
+}
+.hotel-ticket-block .process-creating-ticket-block .bg-light.creating .ico-waiting {
+  top: 58px;
+  left: 44px;
+}
+.hotel-ticket-block .daftar-penumpang-block {
+  font-size: 14px;
+  margin-bottom: 25px;
+}
+.hotel-ticket-block .daftar-penumpang-block .penumpang-item {
+  font-size: 13px;
+  line-height: 20px;
+  margin-bottom: 20px;
+}
+.hotel-ticket-block .daftar-penumpang-block .penumpang-item .block,
+.hotel-ticket-block .daftar-penumpang-block .penumpang-item span {
+  line-height: 20px;
+}
+.hotel-ticket-block .info-penerbangan {
+  font-size: 14px;
+  margin-bottom: 25px;
+}
+.hotel-ticket-block .info-penerbangan .outbound-flight,
+.hotel-ticket-block .info-penerbangan .inbound-flight {
+  margin-bottom: 20px;
+  font-size: 13px;
+}
+.hotel-ticket-block .info-penerbangan .outbound-flight > .block,
+.hotel-ticket-block .info-penerbangan .inbound-flight > .block {
+  line-height: 20px;
+}
+.hotel-ticket-block .informasi-pembayaran {
+  margin-left: -20px;
+  margin-right: -20px;
+  font-size: 14px;
+  border-bottom: 1px solid #ddd;
+}
+.hotel-ticket-block .informasi-pembayaran > div.block {
+  font-size: 13px;
+}
+.hotel-ticket-block .call-center-message {
   padding: 25px 5px;
   font-size: 11px;
   color: #999;
