booking payment step 2 for hotel

--- a/app/jade/hotel-payment-step-3.jade
+++ b/app/jade/hotel-payment-step-3.jade
@@ -164,7 +164,7 @@ block main
           li
             .block.bg-white.text-center
               span.block.text-md.text-center.m-b-xs Pan Pacific Nirwana Resort Bali
-              span.block
+              span.block.bg-white
                 i.ico.ico-star
                 i.ico.ico-star
                 i.ico.ico-star
