--- a/app/less/mobile/helper.less
+++ b/app/less/mobile/helper.less
@@ -265,7 +265,6 @@ p {
 
 .text-light {
   font-weight: 200;
-  font-family: "Gotham Book"
 }
 
 .text-rounded {
@@ -315,7 +314,9 @@ a.text-orange {
 .text-left {
   text-align: left;
 }
-
+.text-right {
+  text-align: right;
+}
 .text-xs {
   font-size: 11px
 }
@@ -933,6 +934,11 @@ a.text-orange {
 .pad-h-15 {
   padding-left: 15px;
   padding-right: 15px
+}
+
+.pad-h-20 {
+  padding-left: 20px;
+  padding-right: 20px
 }
 
 .pointer {
