--- a/app/less/web/booking.less
+++ b/app/less/web/booking.less
@@ -302,7 +302,9 @@
           .ico {
             position: static;
           }
-
+          .block.bg-white {
+            padding-left: 0
+          }
         }
 
         &:last-child {
