--- a/app/css/sapta-tour.mobile.css
+++ b/app/css/sapta-tour.mobile.css
@@ -3780,7 +3780,6 @@ p {
 }
 .text-light {
   font-weight: 200;
-  font-family: "Gotham Book";
 }
 .text-rounded {
   font-weight: 300;
@@ -3818,6 +3817,9 @@ a.text-orange {
 }
 .text-left {
   text-align: left;
+}
+.text-right {
+  text-align: right;
 }
 .text-xs {
   font-size: 11px;
@@ -4286,6 +4288,10 @@ a.text-orange {
 .pad-h-15 {
   padding-left: 15px;
   padding-right: 15px;
+}
+.pad-h-20 {
+  padding-left: 20px;
+  padding-right: 20px;
 }
 .pointer {
   cursor: pointer;
@@ -6149,8 +6155,130 @@ footer a {
 .hotel-booking-block form {
   padding: 0 20px;
 }
-.hotel-booking-block form#flightBookingStep2 {
-  padding: 0 10px;
+.hotel-booking-block form .wrap-light {
+  padding: 10px 0;
+  margin: 0 -20px;
+  background-color: #eee;
+}
+.hotel-booking-block .hotel-detail-info {
+  color: #353535;
+  margin: 0 auto;
+  width: 300px;
+  background: #fff;
+}
+.hotel-booking-block .hotel-detail-info ul {
+  webkit-box-shadow: 0px 0px 0px 1px #d8d8d8, 0px 3px 3px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 0px 0px 1px #d8d8d8, 0px 3px 3px rgba(0, 0, 0, 0.1);
+}
+.hotel-booking-block .hotel-detail-info li {
+  font-size: 14px;
+  position: relative;
+  padding: 10px 20px 10px 55px;
+  background: #fff;
+  border-bottom: 1px solid #e0e0e0;
+  line-height: 30px;
+}
+.hotel-booking-block .hotel-detail-info li:first-child {
+  padding: 15px 0;
+  line-height: normal;
+  font-weight: 600;
+}
+.hotel-booking-block .hotel-detail-info li:first-child .ico {
+  position: static;
+}
+.hotel-booking-block .hotel-detail-info li:first-child .block.bg-white {
+  padding-left: 0;
+}
+.hotel-booking-block .hotel-detail-info li:last-child {
+  border-bottom: none;
+}
+.hotel-booking-block .hotel-detail-info li .ico {
+  position: absolute;
+  top: 13px;
+  left: 20px;
+}
+.hotel-booking-block .hotel-detail-info li .ico-departure {
+  top: 17px;
+}
+.hotel-booking-block .hotel-detail-info li .ico-return {
+  top: 12px;
+}
+.hotel-booking-block .hotel-detail-info li .ico-adult {
+  top: 11px;
+  left: 26px;
+}
+.hotel-booking-block .hotel-detail-info li .ico-airline-circle {
+  left: 22px;
+  top: 14px;
+}
+.hotel-booking-block .hotel-detail-info li .ico-hotel-in,
+.hotel-booking-block .hotel-detail-info li .ico-hotel-out {
+  top: 15px;
+  left: 22px;
+}
+.hotel-booking-block .hotel-detail-info li .ico-room {
+  top: 15px;
+  left: 25px;
+}
+.hotel-booking-block .hotel-detail-info li.bg-white {
+  background-color: #fff;
+}
+.hotel-booking-block .hotel-detail-info li.bg-light {
+  line-height: 20px;
+  padding: 20px 15px;
+  background-color: #f8f8f8;
+}
+.hotel-booking-block .hotel-detail-info li.bg-light .ico {
+  position: static;
+}
+.hotel-booking-block .hotel-detail-info li.bg-light .room-type {
+  color: #888;
+  font-size: 11px;
+}
+.hotel-booking-block .hotel-detail-info li.bg-light img {
+  max-width: 61px;
+  max-height: 61px;
+  margin-right: 15px;
+}
+.hotel-booking-block .hotel-pricing {
+  padding: 10px 0;
+  margin: 0 -20px;
+  color: #353535;
+}
+.hotel-booking-block .hotel-pricing ul {
+  width: 300px;
+  margin: 0 auto;
+  background: #fff;
+  webkit-box-shadow: 0px 0px 0px 1px #d8d8d8, 0px 3px 3px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 0px 0px 1px #d8d8d8, 0px 3px 3px rgba(0, 0, 0, 0.1);
+}
+.hotel-booking-block .hotel-pricing li {
+  font-size: 14px;
+  position: relative;
+  padding: 15px 25px 15px 20px;
+  background: #fff;
+  border-bottom: 1px solid #e0e0e0;
+}
+.hotel-booking-block .hotel-pricing li .gray.text-u-c {
+  font-size: 11px;
+  color: #888888;
+}
+.hotel-booking-block .hotel-pricing li .price {
+  font-size: 24px;
+}
+.hotel-booking-block .hotel-pricing li .price sup {
+  font-size: 14px;
+  right: 5px;
+}
+.hotel-booking-block .hotel-pricing li:last-child {
+  background-color: #f8f8f8;
+  border-bottom: 0;
+}
+.hotel-booking-block .content-text {
+  padding: 15px 20px 0;
+}
+.hotel-booking-block .content-text p {
+  color: #353535;
 }
 .hotel-booking-block .account-login {
   background: #fcaf56;
@@ -6179,178 +6307,6 @@ footer a {
   color: #fff;
   box-shadow: 0px 0px 0px 1px #7287b6;
 }
-.hotel-booking-block .passenger-list {
-  background: #eee;
-  margin-left: -20px;
-  margin-right: -20px;
-}
-.hotel-booking-block .passenger-info-detail {
-  padding: 25px 20px;
-  border-top: 1px solid #ddd;
-}
-.hotel-booking-block .add-more-passenger-block {
-  margin-left: -20px;
-  margin-right: -20px;
-  padding: 25px;
-  background: #eee;
-  border-top: 1px solid rgba(230, 230, 230, 0.9);
-  border-color: #ddd;
-}
-.hotel-booking-block .hotel-detail-info {
-  background: #eee;
-  margin-left: -10px;
-  margin-right: -10px;
-  padding-bottom: 5px;
-  margin-bottom: 15px;
-}
-.hotel-booking-block .hotel-detail-info .outbound-hotel-block,
-.hotel-booking-block .hotel-detail-info .inbound-hotel-block {
-  padding: 10px 10px 0 10px;
-}
-.hotel-booking-block .hotel-detail-info ul.outbound-flight,
-.hotel-booking-block .hotel-detail-info ul.inbound-flight {
-  -webkit-box-shadow: 0px 0px 0px 1px #d8d8d8, 1px 3px 2px rgba(0, 0, 0, 0.1);
-  box-shadow: 0px 0px 0px 1px #d8d8d8, 1px 3px 2px rgba(0, 0, 0, 0.1);
-  margin-bottom: 10px;
-}
-.hotel-booking-block .hotel-detail-info ul.outbound-flight li,
-.hotel-booking-block .hotel-detail-info ul.inbound-flight li {
-  position: relative;
-  padding: 10px 20px 10px 55px;
-  background: #fff;
-  border-bottom: 1px solid #e0e0e0;
-  line-height: 30px;
-}
-.hotel-booking-block .hotel-detail-info ul.outbound-flight li.bg-light,
-.hotel-booking-block .hotel-detail-info ul.inbound-flight li.bg-light {
-  background: #f8f8f8;
-}
-.hotel-booking-block .hotel-detail-info ul.outbound-flight li:first-child,
-.hotel-booking-block .hotel-detail-info ul.inbound-flight li:first-child {
-  padding: 15px 0;
-  line-height: normal;
-  font-weight: 600;
-}
-.hotel-booking-block .hotel-detail-info ul.outbound-flight li:last-child,
-.hotel-booking-block .hotel-detail-info ul.inbound-flight li:last-child {
-  border-bottom: 0;
-}
-.hotel-booking-block .hotel-detail-info ul.outbound-flight li.schedule,
-.hotel-booking-block .hotel-detail-info ul.inbound-flight li.schedule {
-  height: 80px;
-  line-height: 18px;
-}
-.hotel-booking-block .hotel-detail-info ul.outbound-flight li.schedule .ico-departure,
-.hotel-booking-block .hotel-detail-info ul.inbound-flight li.schedule .ico-departure {
-  top: 30px;
-}
-.hotel-booking-block .hotel-detail-info ul.outbound-flight li.schedule .ico-return,
-.hotel-booking-block .hotel-detail-info ul.inbound-flight li.schedule .ico-return {
-  top: 26px;
-}
-.hotel-booking-block .hotel-detail-info ul.outbound-flight li .ico,
-.hotel-booking-block .hotel-detail-info ul.inbound-flight li .ico {
-  position: absolute;
-  top: 17px;
-  left: 20px;
-}
-.hotel-booking-block .hotel-detail-info ul.outbound-flight li .ico-bag,
-.hotel-booking-block .hotel-detail-info ul.inbound-flight li .ico-bag {
-  top: 17px;
-}
-.hotel-booking-block .hotel-detail-info ul.outbound-flight li .ico-adult,
-.hotel-booking-block .hotel-detail-info ul.inbound-flight li .ico-adult {
-  left: 23px;
-}
-.hotel-booking-block .hotel-detail-info ul.outbound-flight li .ico-marker,
-.hotel-booking-block .hotel-detail-info ul.inbound-flight li .ico-marker {
-  top: 17px;
-}
-.hotel-booking-block .hotel-detail-info ul.outbound-flight li.airline,
-.hotel-booking-block .hotel-detail-info ul.inbound-flight li.airline {
-  padding-left: 15px;
-  line-height: 15px;
-}
-.hotel-booking-block .hotel-detail-info ul.outbound-flight li.airline span,
-.hotel-booking-block .hotel-detail-info ul.inbound-flight li.airline span {
-  line-height: 27px;
-}
-.hotel-booking-block .hotel-detail-info ul.outbound-flight li label,
-.hotel-booking-block .hotel-detail-info ul.inbound-flight li label {
-  color: #888;
-  font-size: 11px;
-  font-family: "Gotham Black";
-}
-.hotel-booking-block .passenger-list-block {
-  margin-left: -10px;
-  margin-right: -10px;
-  padding: 5px 0;
-}
-.hotel-booking-block .passenger-list-block .passenger-info {
-  padding: 10px 10px 3px 10px;
-}
-.hotel-booking-block .passenger-list-block .passenger-info ul {
-  -webkit-box-shadow: 0px 0px 0px 1px #d8d8d8, 1px 3px 2px rgba(0, 0, 0, 0.1);
-  box-shadow: 0px 0px 0px 1px #d8d8d8, 1px 3px 2px rgba(0, 0, 0, 0.1);
-  border-bottom: 2px solid #d8d8d8;
-  margin-bottom: 0;
-}
-.hotel-booking-block .passenger-list-block .passenger-info li {
-  padding: 21px 0 21px 68px;
-  border-bottom: 1px solid #d8d8d8;
-}
-.hotel-booking-block .passenger-list-block .passenger-info li:first-child {
-  position: relative;
-}
-.hotel-booking-block .passenger-list-block .passenger-info li .number {
-  line-height: 32pxs;
-  font-size: 36px;
-  left: 17px;
-  top: 20px;
-  color: #d9d9d9;
-}
-.hotel-booking-block .passenger-list-block .passenger-info li label {
-  text-transform: uppercase;
-  font-weight: 600;
-  color: #888;
-}
-.hotel-booking-block .pricing-detail {
-  -webkit-box-shadow: 0px 0px 0px 1px #d8d8d8, 1px 3px 2px rgba(0, 0, 0, 0.1);
-  box-shadow: 0px 0px 0px 1px #d8d8d8, 1px 3px 2px rgba(0, 0, 0, 0.1);
-}
-.hotel-booking-block .pricing-detail li {
-  padding: 17px 20px 17px 25px;
-  border-bottom: 1px solid #d8d8d8;
-  font-size: 14px;
-}
-.hotel-booking-block .pricing-detail li:last-child {
-  border-bottom: 0;
-  text-align: right;
-}
-.hotel-booking-block .pricing-detail li:last-child label {
-  padding-right: 50px;
-}
-.hotel-booking-block .pricing-detail li:last-child sup {
-  font-size: 14px;
-}
-.hotel-booking-block .pricing-detail li:last-child .price {
-  font-size: 24px;
-}
-.hotel-booking-block .pricing-detail li span.pull-left {
-  width: 60%;
-  text-align: left;
-}
-.hotel-booking-block .pricing-detail li span.pull-right {
-  width: 40%;
-  text-align: right;
-  font-weight: 600;
-}
-.hotel-booking-block .pricing-detail li label {
-  text-transform: uppercase;
-  font-weight: 600;
-  margin-bottom: 3px;
-  color: #888;
-}
 .hotel-booking-block .content-block {
   margin-left: -20px;
   margin-right: -20px;
@@ -6366,98 +6322,6 @@ footer a {
 }
 .hotel-booking-block .content-block strong {
   color: #000;
-}
-.hotel-ticket-block {
-  padding: 0 20px;
-}
-.hotel-ticket-block .download-ticket-block {
-  margin-left: -20px;
-  margin-right: -20px;
-  border-color: #ddd;
-}
-.hotel-ticket-block .download-ticket-block .bg-light {
-  margin: 30px 20px 20px;
-  line-height: 24px;
-  background: #f4f4f2;
-  padding: 26px 30px 26px 60px;
-  text-align: left;
-}
-.hotel-ticket-block .download-ticket-block .bg-light .ico-check {
-  top: 30px;
-  left: 20px;
-}
-.hotel-ticket-block .process-creating-ticket-block {
-  margin-left: -20px;
-  margin-right: -20px;
-  border-color: #ddd;
-}
-.hotel-ticket-block .process-creating-ticket-block .bg-light.message {
-  margin: 30px 20px 6px;
-  line-height: 20px;
-  background: #f4f4f2;
-  padding: 25px 20px 25px 60px;
-  text-align: left;
-}
-.hotel-ticket-block .process-creating-ticket-block .bg-light.message .ico-gear {
-  top: 30px;
-  left: 20px;
-}
-.hotel-ticket-block .process-creating-ticket-block .bg-light.creating {
-  font-size: 13px;
-  background: #f4f4f2;
-  text-align: left;
-  margin: 0 20px 30px 20px;
-  padding: 30px 30px 30px 45px;
-}
-.hotel-ticket-block .process-creating-ticket-block .bg-light.creating .duration {
-  padding-left: 25px;
-  font-size: 20px;
-  color: #158ea3;
-  margin-top: 10px;
-}
-.hotel-ticket-block .process-creating-ticket-block .bg-light.creating .ico-waiting {
-  top: 58px;
-  left: 44px;
-}
-.hotel-ticket-block .daftar-penumpang-block {
-  font-size: 14px;
-  margin-bottom: 25px;
-}
-.hotel-ticket-block .daftar-penumpang-block .penumpang-item {
-  font-size: 13px;
-  line-height: 20px;
-  margin-bottom: 20px;
-}
-.hotel-ticket-block .daftar-penumpang-block .penumpang-item .block,
-.hotel-ticket-block .daftar-penumpang-block .penumpang-item span {
-  line-height: 20px;
-}
-.hotel-ticket-block .info-penerbangan {
-  font-size: 14px;
-  margin-bottom: 25px;
-}
-.hotel-ticket-block .info-penerbangan .outbound-flight,
-.hotel-ticket-block .info-penerbangan .inbound-flight {
-  margin-bottom: 20px;
-  font-size: 13px;
-}
-.hotel-ticket-block .info-penerbangan .outbound-flight > .block,
-.hotel-ticket-block .info-penerbangan .inbound-flight > .block {
-  line-height: 20px;
-}
-.hotel-ticket-block .informasi-pembayaran {
-  margin-left: -20px;
-  margin-right: -20px;
-  font-size: 14px;
-  border-bottom: 1px solid #ddd;
-}
-.hotel-ticket-block .informasi-pembayaran > div.block {
-  font-size: 13px;
-}
-.hotel-ticket-block .call-center-message {
-  padding: 25px 5px;
-  font-size: 11px;
-  color: #999;
 }
 .btn-download-ticket {
   margin: 0 auto 30px;
