--- a/app/less/mobile/hotel-booking.less
+++ b/app/less/mobile/hotel-booking.less
@@ -65,8 +65,156 @@
   form {
     padding: 0 20px;
 
-    &#flightBookingStep2 {
-      padding: 0 10px;
+    .wrap-light {
+      padding:10px 0;
+      margin: 0 -20px;
+      background-color: #eee;
+    }
+  }
+
+  .hotel-detail-info, {
+    color: #353535;
+    margin: 0 auto;
+    width: 300px;
+    background: #fff;
+
+    ul {
+      webkit-box-shadow: 0px 0px 0px 1px #d8d8d8, 0px 3px 3px rgba(0, 0, 0, 0.1);
+      box-shadow: 0px 0px 0px 1px #d8d8d8, 0px 3px 3px rgba(0, 0, 0, 0.1);
+    }
+
+    li {
+      font-size: 14px;
+      position: relative;
+      padding: 10px 20px 10px 55px;
+      background: #fff;
+      border-bottom: 1px solid #e0e0e0;
+      line-height: 30px;
+
+      &:first-child {
+        padding: 15px 0;
+        line-height: normal;
+        font-weight: 600;
+
+        .ico {
+          position: static;
+        }
+        .block.bg-white {
+          padding-left: 0
+        }
+      }
+
+      &:last-child {
+        border-bottom: none;
+      }
+
+      .ico {
+        position: absolute;
+        top: 13px;
+        left: 20px;
+
+        &-departure {
+          top: 17px;
+        }
+        &-return {
+          top: 12px;
+        }
+
+        &-adult {
+          top: 11px;
+          left: 26px;
+        }
+
+        &-airline-circle {
+          left: 22px;
+          top: 14px;
+        }
+
+        &-hotel-in,
+        &-hotel-out {
+          top: 15px;
+          left: 22px
+        }
+
+        &-room {
+          top: 15px;
+          left:25px
+        }
+      }
+
+      &.bg-white {
+        background-color: #fff;
+      }
+      &.bg-light {
+        line-height: 20px;
+        padding: 20px 15px;
+        background-color: #f8f8f8;
+
+        .ico {
+          position: static;
+        }
+
+        .room-type {
+          color: #888;
+          font-size: 11px;
+        }
+
+        img {
+          max-width: 61px;
+          max-height: 61px;
+          margin-right: 15px;
+        }
+      }
+    }
+  }
+
+  .hotel-pricing {
+    padding:10px 0;
+    margin: 0 -20px;
+    color: #353535;
+
+    ul {
+      width: 300px;
+      margin: 0 auto;
+      background: #fff;
+      webkit-box-shadow: 0px 0px 0px 1px #d8d8d8, 0px 3px 3px rgba(0, 0, 0, 0.1);
+      box-shadow: 0px 0px 0px 1px #d8d8d8, 0px 3px 3px rgba(0, 0, 0, 0.1);
+    }
+
+    li {
+      font-size: 14px;
+      position: relative;
+      padding: 15px 25px 15px 20px;
+      background: #fff;
+      border-bottom: 1px solid #e0e0e0;
+
+      .gray.text-u-c {
+        font-size: 11px;
+        color: #888
+      }
+
+      .price {
+        font-size: 24px;
+
+        sup {
+          font-size: 14px;
+          right: 5px
+        }
+      }
+
+      &:last-child {
+        background-color: #f8f8f8;
+        border-bottom: 0;
+      }
+
+    }
+  }
+
+  .content-text {
+    padding: 15px 20px 0;
+
+    p {
+      color: #353535
     }
   }
 
@@ -101,199 +249,6 @@
     }
   }
 
-  .passenger-list {
-    background: #eee;
-    margin-left: -20px;
-    margin-right: -20px;
-  }
-
-  .passenger-info-detail {
-    padding: 25px 20px;
-    border-top: 1px solid #ddd;
-  }
-
-  .add-more-passenger-block {
-    margin-left: -20px;
-    margin-right: -20px;
-    padding: 25px;
-    background: #eee;
-    .b-t;
-    border-color: #ddd;
-  }
-
-  .hotel-detail-info {
-    background: #eee;
-    margin-left: -10px;
-    margin-right: -10px;
-    padding-bottom: 5px;
-    margin-bottom: 15px;
-
-    .outbound-hotel-block,
-    .inbound-hotel-block {
-      padding: 10px 10px 0 10px;
-    }
-
-    ul.outbound-flight,
-    ul.inbound-flight {
-      -webkit-box-shadow: 0px 0px 0px 1px #d8d8d8, 1px 3px 2px rgba(0, 0, 0, 0.1);
-      box-shadow: 0px 0px 0px 1px #d8d8d8, 1px 3px 2px rgba(0, 0, 0, 0.1);
-      margin-bottom:10px;
-
-      li {
-        .pos-rlt;
-        padding: 10px 20px 10px 55px;
-        background: #fff;
-        border-bottom: 1px solid #e0e0e0;
-        line-height: 30px;
-
-        &.bg-light {
-          background: #f8f8f8
-        }
-
-        &:first-child {
-          padding: 15px 0;
-          line-height: normal;
-          .f-bold;
-        }
-
-        &:last-child {
-          border-bottom: 0;
-        }
-
-        &.schedule {
-          height: 80px;
-          line-height: 18px;
-
-          .ico-departure {
-            top: 30px
-          }
-
-          .ico-return {
-            top: 26px
-          }
-        }
-
-        .ico {
-          position: absolute;
-          top: 17px;
-          left: 20px;
-
-          &-bag {
-            top: 17px;
-          }
-
-          &-adult {
-            left: 23px
-          }
-          &-marker {
-            top: 17px;
-          }
-        }
-
-        &.airline {
-          padding-left: 15px;
-          line-height: 15px;
-
-          span {
-            line-height: 27px
-          }
-        }
-
-        label {
-          color: #888;
-          font-size: 11px;
-          font-family: "Gotham Black"
-        }
-      }
-    }
-  }
-
-  .passenger-list-block {
-    margin-left: -10px;
-    margin-right: -10px;
-    padding: 5px 0;
-
-    .passenger-info {
-      padding: 10px 10px 3px 10px;
-
-      ul {
-        -webkit-box-shadow: 0px 0px 0px 1px #d8d8d8, 1px 3px 2px rgba(0, 0, 0, 0.1);
-        box-shadow: 0px 0px 0px 1px #d8d8d8, 1px 3px 2px rgba(0, 0, 0, 0.1);
-        border-bottom: 2px solid #d8d8d8;
-        margin-bottom: 0;
-      }
-
-      li {
-        padding: 21px 0 21px 68px;
-        border-bottom: 1px solid #d8d8d8;
-
-        &:first-child {
-          .pos-rlt;
-        }
-
-        .number {
-          line-height: 32pxs;
-          font-size: 36px;
-          left: 17px;
-          top: 20px;
-          color: #d9d9d9;
-        }
-
-        label {
-          .text-u-c;
-          .f-bold;
-          color: #888;
-        }
-      }
-    }
-  }
-
-  .pricing-detail {
-    -webkit-box-shadow: 0px 0px 0px 1px #d8d8d8, 1px 3px 2px rgba(0, 0, 0, 0.1);
-    box-shadow: 0px 0px 0px 1px #d8d8d8, 1px 3px 2px rgba(0, 0, 0, 0.1);
-    li {
-      padding: 17px 20px 17px 25px;
-      border-bottom: 1px solid #d8d8d8;
-      font-size: 14px;
-
-      &:last-child {
-        border-bottom: 0;
-        text-align: right;
-
-        label {
-          padding-right: 50px;
-        }
-
-        sup {
-          font-size: 14px
-        }
-
-        .price {
-          font-size: 24px;
-        }
-      }
-
-      span {
-        &.pull-left {
-          width: 60%;
-          text-align: left;
-        }
-        &.pull-right {
-          width: 40%;
-          text-align: right;
-          .f-bold;
-        }
-      }
-
-      label {
-        .text-u-c;
-        .f-bold;
-        margin-bottom: 3px;
-        color: #888;
-      }
-    }
-  }
-
   .content-block {
     margin-left: -20px;
     margin-right: -20px;
@@ -312,115 +267,6 @@
     strong {
       color: #000;
     }
-  }
-}
-
-.hotel-ticket-block {
-  padding: 0 20px;
-
-  .download-ticket-block {
-    margin-left: -20px;
-    margin-right: -20px;
-    border-color: #ddd;
-
-    .bg-light {
-      margin: 30px 20px 20px;
-      line-height: 24px;
-      background: #f4f4f2;
-      padding: 26px 30px 26px 60px;
-      text-align: left;
-
-      .ico-check {
-        top: 30px;
-        left: 20px;
-      }
-    }
-  }
-
-  .process-creating-ticket-block {
-    margin-left: -20px;
-    margin-right: -20px;
-    border-color: #ddd;
-
-    .bg-light.message {
-      margin: 30px 20px 6px;
-      line-height: 20px;
-      background: #f4f4f2;
-      padding: 25px 20px 25px 60px;
-      text-align: left;
-
-      .ico-gear {
-        top: 30px;
-        left: 20px;
-      }
-    }
-
-    .bg-light.creating {
-      font-size: 13px;
-      background: #f4f4f2;
-      text-align: left;
-      margin: 0 20px 30px 20px;
-      padding: 30px 30px 30px 45px;
-
-      .duration {
-        padding-left: 25px;
-        font-size: 20px;
-        color: @brand-primary;
-        margin-top: 10px;
-      }
-
-      .ico-waiting {
-        top: 58px;
-        left: 44px;
-      }
-    }
-  }
-
-  .daftar-penumpang-block {
-    font-size: 14px;
-    margin-bottom: 25px;
-
-    .penumpang-item {
-      font-size: 13px;
-      line-height: 20px;
-      margin-bottom: 20px;
-
-      .block, span {
-        line-height: 20px
-      }
-    }
-  }
-
-  .info-penerbangan {
-    font-size: 14px;
-    margin-bottom: 25px;
-
-    .outbound-flight,
-    .inbound-flight {
-      margin-bottom: 20px;
-      font-size: 13px;
-
-      > .block {
-        line-height: 20px
-      }
-    }
-  }
-
-  .informasi-pembayaran {
-    margin-left: -20px;
-    margin-right: -20px;
-    font-size: 14px;
-    border-bottom: 1px solid #ddd;
-
-    > div.block {
-      font-size: 13px;
-    }
-  }
-
-  .call-center-message {
-    padding: 25px 5px;
-    font-size: 11px;
-    color: #999;
   }
 }
 
