--- a/app/less/mobile/hotel-booking.less
+++ b/app/less/mobile/hotel-booking.less
@@ -268,6 +268,44 @@
       color: #000;
     }
   }
+
+  .info-text-pemesanan {
+    .ico-check {
+      position: absolute;
+      left: 0;
+      top: 0;
+    }
+    p {
+      font-size: 12px;
+      color: #000;
+      padding-left: 35px;
+    }
+  }
+
+  &.hotel-booking-step-3 {
+    .credit-card-payment {
+      img {
+        vertical-align: middle;
+      }
+    }
+
+    .boxing.inline {
+      width: 133px;
+      margin-right: 10px;
+      display: inline-block;
+
+      &.m-r-none {
+        margin-right: 0;
+      }
+    }
+
+    .billing-address-block {
+      p {
+        line-height: 20px;
+        color: #000
+      }
+    }
+  }
 }
 
 .btn-download-ticket {
