--- a/app/jade-mobile/includes/aside-menu.jade
+++ b/app/jade-mobile/includes/aside-menu.jade
@@ -12,7 +12,7 @@ nav#slide-menu
   .m-t-sm
     ul.table-view.main-menu
       li.table-view-cell
-        a(href='/mobile/tours.html')
+        a(href='/mobile/index.html')
           i.ico.ico-tours
           span.inline Tours
 
