--- a/app/less/helper/icons.less
+++ b/app/less/helper/icons.less
@@ -188,6 +188,18 @@
         height: 15px;
         background-position: -158px -1px
       }
+
+      &-star-white {
+        width: 12px;
+        height: 15px;
+        background-position: -88px -17px;
+      }
+
+      &-rate {
+        width: 13px;
+        height: 15px;
+        background-position: -107px -22px;
+      }
     }
   }
 }
