--- a/app/less/mobile.less
+++ b/app/less/mobile.less
@@ -20,4 +20,6 @@
 @import "mobile/nav-tabs.less";
 @import "mobile/tour.less";
 @import "mobile/flight-booking.less";
+@import "mobile/hotel.less";
+@import "mobile/swipebox.less";
 @import "mobile/hotel-booking.less";
