--- a/app/less/mobile/helper.less
+++ b/app/less/mobile/helper.less
@@ -243,6 +243,10 @@ p {
   font-weight: 600
 }
 
+.f-italic {
+  font-style: italic;
+}
+
 .text-darker {
   color: #393030
 }
@@ -902,6 +906,10 @@ a.text-orange {
 
 .pad-t-n {
   padding-top: 0 !important
+}
+
+.lh20 {
+  line-height: 20px;
 }
 
 .pad-b-n {
