--- a/app/less/mobile/main.less
+++ b/app/less/mobile/main.less
@@ -394,6 +394,10 @@ footer {
       margin-top: 85px;
       margin-bottom: 5px;
       line-height: 12px;
+
+      a {
+        color: #fff
+      }
     }
 
     .f-bold {
