--- a/app/less/mobile/main.less
+++ b/app/less/mobile/main.less
@@ -145,6 +145,11 @@ div#container {
     background: #eee;
     padding-bottom: 50px
   }
+
+  &.form-login-register {
+    background: #eee;
+    padding-bottom: 30px
+  }
 }
 
 body.menu-active {
