--- a/app/jade-mobile/includes/aside-menu.jade
+++ b/app/jade-mobile/includes/aside-menu.jade
@@ -36,15 +36,15 @@ nav#slide-menu
           i.ico.ico-blog
           span.inline Blog
 
-      //- li.table-view-cell.access-menu
-      //-   a(href='/mobile/blog.html')
-      //-     i.ico.ico-mobile.ico-login
-      //-     span.inline Login
+      li.table-view-cell.access-menu
+        a(href='/mobile/login.html')
+          i.ico.ico-mobile.ico-login
+          span.inline Login
 
-      //- li.table-view-cell.access-menu
-      //-   a(href='/mobile/blog.html')
-      //-     i.ico.ico-mobile.ico-register
-      //-     span.inline Register
+      li.table-view-cell.access-menu
+        a(href='/mobile/register.html')
+          i.ico.ico-mobile.ico-register
+          span.inline Register
 
     ul.list-style.bg-black
       li.access-menu
