user profile setting for mobile

--- a/app/jade-mobile/login.jade
+++ b/app/jade-mobile/login.jade
@@ -20,7 +20,7 @@ block main
           input.bloc.m-b-xs(type="text", value="Anissa Sudirman")
 
       .form-group.pad-h-15.m-b-lg
-        .boxing.name.b.m-b-sm.pos-rlt
+        .boxing.b.m-b-sm.pos-rlt
           label.block.text-xs.m-b-sm Password
           input.bloc.m-b-xs(type="password", value="Password")
 
