--- a/app/css/sapta-tour.mobile.css
+++ b/app/css/sapta-tour.mobile.css
@@ -6954,4 +6954,39 @@ html.swipebox-html.swipebox-touch {
   text-indent: -9999px;
   overflow: hidden;
 }
+.user-account-profile {
+  height: 100%;
+  min-height: 100%;
+  height: auto !important;
+  background-color: #f4f4f4;
+}
+.user-account-profile .content-block {
+  background: #fff;
+}
+.user-account-profile .content-block p {
+  padding: 5px;
+  color: #353535;
+  font-size: 14px;
+  line-height: 22px;
+}
+.user-account-profile .content-block .ico-check {
+  position: absolute;
+  top: 10px;
+  right: 5px;
+}
+.user-account-profile .connect-with-fb {
+  background: #919191;
+  padding-left: 15px;
+  padding-right: 15px;
+  color: #fff;
+  border-radius: 3px;
+  font-size: 13px;
+  line-height: 35px;
+  border-top: 1px solid #9f9f9f;
+  -webkit-box-shadow: 0px 0px 0px 1px #8d8d8d;
+  box-shadow: 0px 0px 0px 1px #8d8d8d;
+}
+.user-account-profile button {
+  width: 100% !important;
+}
 /*# sourceMappingURL=sapta-tour.mobile.css.map */
