--- a/app/less/mobile.less
+++ b/app/less/mobile.less
@@ -23,3 +23,4 @@
 @import "mobile/hotel.less";
 @import "mobile/swipebox.less";
 @import "mobile/hotel-booking.less";
+@import "mobile/user-account.less";
