--- a/app/jade-mobile/includes/aside-menu.jade
+++ b/app/jade-mobile/includes/aside-menu.jade
@@ -48,19 +48,19 @@ nav#slide-menu
 
     ul.list-style.bg-black
       li.access-menu
-        a(href='/mobile/blog.html')
+        a(href='/mobile/profile.html')
           span.inline Profile Setting
 
       li.access-menu
-        a(href='/mobile/blog.html')
+        a(href='/mobile/my-booking.html')
           span.inline My Bookings
 
       li.access-menu
-        a(href='/mobile/blog.html')
+        a(href='/mobile/my-credit-card.html')
           span.inline My Credit Card Setting
 
       li.access-menu
-        a(href='/mobile/blog.html')
+        a(href='/mobile/my-passenger-list.html')
           span.inline Passenger List
 
 
