--- a/app/less/mobile/helper.less
+++ b/app/less/mobile/helper.less
@@ -312,6 +312,10 @@ a.text-orange {
   font-size: 14px;
 }
 
+.text-13px {
+  font-size: 13px;
+}
+
 .text-sm {
   font-size: 12px
 }
@@ -935,7 +939,7 @@ a.text-orange {
 }
 
 .pad15 {
-  padding: 10px
+  padding: 15px
 }
 
 .pad-v-15 {
