--- a/app/less/mobile/user-account.less
+++ b/app/less/mobile/user-account.less
@@ -38,3 +38,44 @@
     width: 100% !important
   }
 }
+
+
+.user-booking-history {
+  min-height: 210px;
+  height: 210px;
+  height: auto !important;
+  background-color: #f4f4f4;
+
+  .booking-item {
+    background: #fff;
+
+    .row-item {
+
+      > .m-t-lg {
+        margin-top: 25px;
+      }
+
+      > .m-b-lg {
+        margin-bottom: 25px
+      }
+
+      > .pull-left {
+        padding-top: 30px;
+        padding-bottom: 30px;
+
+        &:first-child {
+          padding-left: 20px;
+          padding-right: 20px;
+        }
+
+        &:nth-child(2) {
+          padding-left: 20px
+        }
+      }
+    }
+  }
+
+  .btn-download-ticket {
+    margin-bottom: 0;
+  }
+}
