register page for mobile

--- a/app/less/mobile/form-find.less
+++ b/app/less/mobile/form-find.less
@@ -450,4 +450,14 @@
       }
     }
   }
+
+  &.form-register {
+    .account-login {
+      .flight-booking-block .account-login
+    }
+
+    button {
+      width: 100%
+    }
+  }
 }
