--- a/app/less/mobile/helper.less
+++ b/app/less/mobile/helper.less
@@ -942,6 +942,10 @@ a.text-orange {
   padding: 15px
 }
 
+.pad20 {
+  padding: 20px
+}
+
 .pad-v-15 {
   padding-top: 15px;
   padding-bottom: 15px;
