--- a/app/css/sapta-tour.mobile.css
+++ b/app/css/sapta-tour.mobile.css
@@ -4303,6 +4303,9 @@ a.text-orange {
 .pad15 {
   padding: 15px;
 }
+.pad20 {
+  padding: 20px;
+}
 .pad-v-15 {
   padding-top: 15px;
   padding-bottom: 15px;
@@ -5292,6 +5295,36 @@ footer a {
 }
 .sapta-form.form-login .form-group.separator span {
   margin-left: -25px !important;
+}
+.sapta-form.form-register .account-login {
+  background: #fcaf56;
+  padding: 20px 25px;
+  margin-bottom: 25px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 0px 1px #e99e46, 1px 2px 3px #d8d8d8;
+}
+.sapta-form.form-register .account-login .btn-login,
+.sapta-form.form-register .account-login .btn-fb-login {
+  display: inline-block;
+  border-radius: 3px;
+  font-size: 13px;
+  line-height: 34px;
+}
+.sapta-form.form-register .account-login .btn-login {
+  margin-right: 5px;
+  width: 60px;
+  background: #fff;
+  color: #000;
+  box-shadow: 0px 0px 0px 1px #c0c0c0, 0px 1px 1px #d8d8d8;
+}
+.sapta-form.form-register .account-login .btn-fb-login {
+  width: 155px;
+  background: #5e76ac;
+  color: #fff;
+  box-shadow: 0px 0px 0px 1px #7287b6;
+}
+.sapta-form.form-register button {
+  width: 100%;
 }
 .btn-download-e-ticket {
   background: url(../img/btn-download-eticket.png) no-repeat 0 0;
