--- a/app/less/mobile.less
+++ b/app/less/mobile.less
@@ -24,3 +24,4 @@
 @import "mobile/swipebox.less";
 @import "mobile/hotel-booking.less";
 @import "mobile/user-account.less";
+@import "mobile/static-page.less";
