--- a/app/less/helper/icons.less
+++ b/app/less/helper/icons.less
@@ -107,6 +107,12 @@
         background-position: 0px -19px;
       }
 
+      &-bag-md {
+        width: 22px;
+        height: 19px;
+        background-position: -56px -17px;
+      }
+
       &-flight-md {
         width: 30px;
         height: 17px;
