--- a/app/less/mobile.less
+++ b/app/less/mobile.less
@@ -25,3 +25,4 @@
 @import "mobile/hotel-booking.less";
 @import "mobile/user-account.less";
 @import "mobile/static-page.less";
+@import "mobile/blog.less";
