--- a/app/less/mobile/main.less
+++ b/app/less/mobile/main.less
@@ -356,7 +356,8 @@ footer {
     background: url(../img/mobile/bg-home-banner.png) repeat-x top center;
   }
 
-  &.hotels {
+  &.hotels,
+  &.blog {
     height: 130px;
     .banner-title {
       font-weight: 600;
@@ -372,6 +373,9 @@ footer {
     }
   }
 
+  &.blog {
+    height: 105px;
+  }
 
   .banner-title {
     font-size: 14px;
