--- a/app/less/mobile/blog.less
+++ b/app/less/mobile/blog.less
@@ -7,7 +7,7 @@
 
   .overlay {
     position: absolute;
-    height: 131px;
+    height: 130px;
     width: 100%;
     z-index: 1;
     left: 0;
@@ -25,7 +25,6 @@
     a.blog-category {
       display: block;
       color: #fff;
-      margin-top: 75px;
     }
 
     .name {
@@ -52,5 +51,32 @@
       width: 100%;
       height: 130px;
     }
+  }
+}
+
+.blog-post-block {
+  figure {
+    img {
+      max-width: 100%;
+    }
+  }
+
+  .content-text {
+    line-height: 21px;
+
+    p {
+      color: #252525;
+      line-height: 21px;
+    }
+  }
+
+  .stButton .stFb,
+  .stButton .stTwbutton,
+  .stButton .stMainServices {
+    height: 25px
+  }
+
+  .stButton .stButton_gradient {
+    height: 21px
   }
 }
