fixing select box with custome selebox

--- a/app/less/apps.less
+++ b/app/less/apps.less
@@ -39,3 +39,7 @@
 @import "web/hotels";
 
 @import "plugins/datepicker";
+
+@import "plugins/selectize";
+
+// @import "plugins/selectize.bootstrap3.less";
