--- a/app/less/helper/form.less
+++ b/app/less/helper/form.less
@@ -240,7 +240,8 @@
     &.selectbox {
       width: 150px;
       padding-left: 0;
-      padding-right: 10px;
+      padding-bottom: 0;
+      padding-right: 0px;
 
       &.baggage {
         width: 320px;
@@ -254,18 +255,18 @@
         cursor: pointer !important
       }
 
-      &:after {
-        z-index: 0;
-        display: block;
-        content: " ";
-        width: 20px;
-        height: 20px;
-        background: #fff url(../img/dropdown-icon.png) no-repeat center center;
-        position: absolute;
-        right: 7px;
-        bottom: 8px;
-        cursor: pointer;
-      }
+      // &:after {
+      //   z-index: 0;
+      //   display: block;
+      //   content: " ";
+      //   width: 20px;
+      //   height: 20px;
+      //   background: #fff url(../img/dropdown-icon.png) no-repeat center center;
+      //   position: absolute;
+      //   right: 7px;
+      //   bottom: 8px;
+      //   cursor: pointer;
+      // }
     }
 
     &.passport {
