--- a/app/jade/include/mixin.jade
+++ b/app/jade/include/mixin.jade
@@ -268,8 +268,8 @@ mixin PassengerInfo(number)
       .boxing.gender.selectbox.b.m-t-md.pos-rlt
         label.block.text-xs Title
         select(name="gender")
-          option(selected="selected") Miss
-          option() Mr
+          option(selected="selected", value="Miss") Miss
+          option(value="Mr") Mr
 
     .pull-left.m-b-md
       .boxing.name.b.m-t-md
@@ -287,8 +287,8 @@ mixin PassengerInfo(number)
         label.block.text-xs Nationality
         select(name="nationality")
           option(selected="selected") Indonesian
-          option() Singaporean
-          option() Malaysian
+          option(value="Singaporean") Singaporean
+          option(value="Malaysian") Malaysian
 
     .clearfix
 
@@ -296,60 +296,60 @@ mixin PassengerInfo(number)
       .boxing.bod.selectbox.b.m-t-md.pos-rlt
         label.block.text-xs Day of Birth
         select(name="day")
-          option(selected="selected") 29
-          option() 1
-          option() 2
-          option() 3
-          option() 4
+          option(selected="selected", value="29") 29
+          option(value="1") 1
+          option(value="2") 2
+          option(value="3") 3
+          option(value="4") 4
 
     .pull-left.m-r-md.m-b-md
       .boxing.bod.selectbox.b.m-t-md.pos-rlt
         label.block.text-xs Month of Birth
         select(name="month")
-          option January
-          option February
-          option March
-          option April
-          option May
-          option June
-          option July
-          option August
-          option(selected="selected") September
-          option October
-          option November
-          option Desember
+          option(value="January") January
+          option(value="February") February
+          option(value="March") March
+          option(value="April") April
+          option(value="May") May
+          option(value="June") June
+          option(value="July") July
+          option(value="August") August
+          option(value="September", selected="selected") September
+          option(value="October") October
+          option(value="November") November
+          option(value="Desember") Desember
 
     .pull-left.m-r-md.m-b-md
       .boxing.bod.selectbox.b.m-t-md.pos-rlt
         label.block.text-xs Year of Birth
         select(name="year")
-          option 1987
-          option(selected) 1986
-          option 1985
-          option 1984
-          option 1983
-          option 1982
+          option(value="1987") 1987
+          option(value="", selected) 1986
+          option(value="1985") 1985
+          option(value="1984") 1984
+          option(value="1983") 1983
+          option(value="1982") 1982
 
     .clearfix
       .pull-left.m-r-md.m-b-md
         .boxing.baggage.selectbox.b.m-t-md.pos-rlt
           label.block.text-xs Baggage Jakarta - Denpasar
           select(name="baggage_departure")
-            option(selected="selected") No Baggage
-            option 20kg
-            option 30 Kg
-            option 40 Kg
-            option 50 Kg
+            option(selected="selected", value="No Baggage") No Baggage
+            option(value="20") 20kg
+            option(value="30") 30 Kg
+            option(value="40") 40 Kg
+            option(value="50") 50 Kg
 
       .pull-left.m-b-md
         .boxing.baggage.selectbox.b.m-t-md.pos-rlt
           label.block.text-xs Baggage Denpasar - Jakarta
           select(name="baggage_return")
             option No Baggage
-            option(selected="selected") 20kg
-            option 30 Kg
-            option 40 Kg
-            option 50 Kg
+            option(selected="selected", value="20") 20kg
+            option(value="30") 30 Kg
+            option(value="40") 40 Kg
+            option(value="50") 50 Kg
 
       .clearfix
     .dashed.m-t-lg.m-b-lg
